<resources>
    <string name="app_name">Aphrodite</string>
    <string name="nav_header_title">Bhagyashri Purohit</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Profile Image</string>
    <string name="sos_button_desc">SOS button</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_shops_near_by">Shops Nearby</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="title_home">Home</string>
    <string name="title_requests">Requests</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_chats">Chats</string>


    <string name="API_KEY">AIzaSyCzPkqJ2xsm9qdyYSMOu78RIQy8nKBngvM</string>

    <string name="login_string">Already have an account? <b>Login</b></string>
    <string name="signup_string">Don\'t have an account? <b>Signup</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>


</resources>