<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:paddingRight="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_height="90dp"
        android:layout_width="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/profile1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/nav_header_title"
        android:fontFamily="@font/inter_extrabold"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:paddingBottom="16dp"
        android:textSize="12sp"
        android:textColor="@color/secondaryTextColor"
        android:text="@string/nav_header_subtitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="@color/tertiaryTextColor" />

</LinearLayout>